--- a/css/styles.css
+++ b/css/styles.css
@@ -7019,6 +7019,9 @@ textarea.form-control-lg {
   margin-bottom: 1rem !important;
 }
 
+.mb-3-white{color:#fff;}
+
+
 .mb-4 {
   margin-bottom: 1.5rem !important;
 }
